# CAWA

./: .gitignore  Cargo.toml  README.md  test_demo.sh
completions/zsh/: _cs
scripts/: install.sh
src/: cli.rs  config.rs  main.rs  notifications.rs  runner.rs  tui.rs  wizard.rs
